add scp management apis (#14)
